Add noindex meta tag to prevent search engine indexing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
     <title>日本投資助言株式会社 - 金融リテラシーの向上をあなたと共に</title>
     <link rel="icon" type="image/png" href="image/favicon.png">
     <link rel="stylesheet" href="styles.css">
